fix userDashboard/myProjects spacing

--- a/client/src/styles/ProjectListItem.scss
+++ b/client/src/styles/ProjectListItem.scss
@@ -6,8 +6,7 @@ article {
   border-radius: base.$border-radius;
   padding: 20px 30px;
   background-color: base.$off-white;
-  min-width: 450px;
-  width: 45%;
+  min-width: 422px;
 
   &:hover {
     border: 3px rgba(base.$medium-grey, 0.5) solid;
